# cp02_monitor

./: .gitignore  LICENSE  README.md
CP02_Monitor/: CP02_Monitor.ino  Config_Manager.cpp  Config_Manager.h  Display_Manager.cpp  Display_Manager.h  Display_ST7789.cpp  Display_ST7789.h  LVGL_Driver.cpp  LVGL_Driver.h  Power_Monitor.cpp  Power_Monitor.h  RGB_lamp.cpp  RGB_lamp.h  Wireless.cpp  Wireless.h
CP02_Monitor_4.3/: CMakeLists.txt  sdkconfig  sdkconfig.defaults
CP02_Monitor_4.3/components/lvgl__lvgl/src/font/: cn_16.c  lv_font.h
CP02_Monitor_4.3/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  lvgl_port.c  lvgl_port.h  main.c  power_monitor.c  power_monitor.h  settings_ui.c  settings_ui.h  waveshare_rgb_lcd_port.c  waveshare_rgb_lcd_port.h  wifi_manager.c  wifi_manager.h
CP02_Monitor_ESP/: CMakeLists.txt  sdkconfig
CP02_Monitor_ESP/main/: CMakeLists.txt  idf_component.yml  main.c
CP02_Monitor_ESP/main/ConfigManager/: ConfigManager.c  ConfigManager.h  Display_Manager.c  Display_Manager.h
CP02_Monitor_ESP/main/LCD_Driver/: ST7789.c  ST7789.h
CP02_Monitor_ESP/main/LVGL_Driver/: LVGL_Driver.c
CP02_Monitor_ESP/main/LVGL_UI/: LVGL_Example.c  LVGL_Example.h
CP02_Monitor_ESP/main/Power_Monitor/: IP_Scanner.c  IP_Scanner.h  Power_Monitor.c  Power_Monitor.h
CP02_Monitor_ESP/main/RGB/: RGB.c  RGB.h
CP02_Monitor_ESP/main/SD_Card/: SD_MMC.c  SD_MMC.h
CP02_Monitor_ESP/main/Wireless/: Wireless.c  Wireless.h
